Fixed horizontal alignment of Images in Slider

--- a/app/src/app/shared/components/carousel/slide/slide.component.scss
+++ b/app/src/app/shared/components/carousel/slide/slide.component.scss
@@ -6,7 +6,8 @@ $container-row-height: 15em;
 }
 
 .img_self {
-  display: flex;
+  display: block;
+  margin:0 auto;
   cursor: pointer;
   max-height: 100%;
   max-width: 100%;
